# Lichmanova_bot

./: .env.app-bot  .env.app-web  Caddyfile  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  container.py  db.py  main.py
app/core/: logging.py
app/handlers/: admin.py  age_verify.py  churn.py  debug_log.py  errors.py  id_cmd.py  materials.py  members.py  pay.py  payments_rk.py  start.py  subscription.py
app/keyboards/: common.py  menu.py  payments.py
app/middlewares/: deps.py  logging.py  throttling.py
app/migrations/: README  env.py
app/migrations/versions/: 0910d0548ef8_expand_subscriptions_plan_len.py  20251012_add_auto_renew.py  (+1 more)
app/models/: __init__.py  access_grant.py  access_link.py  base.py  churn_reason.py  material.py  payment.py  reminder.py  setting.py  subscription.py  user.py
app/pay/: robokassa.py
app/providers/: fake_payment_provider.py
app/repositories/: access_repo.py  churn_repo.py  material_repo.py  payment_repo.py  reminder_repo.py  setting_repo.py  subscription_repo.py  user_repo.py
app/scheduler/: jobs.py
app/scripts/: confirm_payment.py
app/services/: access_service.py  admin_service.py  churn_service.py  invite_factory.py  material_service.py  payment_service.py  reminder_service.py  subscription_service.py
app/tests/: manual_ping.py
app/utils/: dates.py  ids.py  logging.py  texts.py
app/web/: errors.py  middleware_logging.py  robokassa_routes.py  routes.py  server.py
docker/: entrypoint.sh
roboweb/: Dockerfile  app.py
