[project]
name = "tg-sub-bot"
version = "0.1.0"
requires-python = ">=3.11"

# Прод-стек: бот + веб + БД + планировщик + логирование
dependencies = [
  "aiogram>=3.12.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",              # async-драйвер для рантайма
  "alembic>=1.13",
  "psycopg[binary]>=3.1",       # sync-драйвер для Alembic
  "redis>=5.0",
  "APScheduler>=3.10",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "requests>=2.32",             # используется в roboweb/app.py
  "python-json-logger>=2.0",
  "orjson>=3.10",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Чтобы setuptools нашёл пакеты
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "roboweb*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
strict = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
